--- a/src/app/components/txs/txs-list-card/txs-list-card.component.html
+++ b/src/app/components/txs/txs-list-card/txs-list-card.component.html
@@ -1,4 +1,4 @@
-<section class="section">
+<!-- <section class="section">
   <div class="row main-row">
     <div class="col-md-12">
       <mat-card alignment="left">
@@ -15,7 +15,7 @@
         </div>
       </mat-card>
     </div>
-    <div class="col-md-12">
+    <div class="col-md-12"> -->
       <mat-card alignment="left">
         <mat-card-title>Transactions (last 100)</mat-card-title>
           <div class="card-body">
@@ -50,7 +50,7 @@
                   <ng-container matColumnDef="hash">
                     <th mat-header-cell *matHeaderCellDef> Hash </th>
                     <td mat-cell *matCellDef="let tx">
-                      {{ tx.txhash }}
+                      {{ tx.txhash  | slice:0:15 }}...
                       <i  class="ion-ios-copy copy-button" 
                           style="cursor: pointer;" 
                           ngxClipboard [cbContent]="tx.txhash" 
@@ -74,6 +74,6 @@
           <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
       </mat-card>
-    </div>
+    <!-- </div>
   </div>
-</section>
+</section> -->
