--- a/src/app/components/tx/tx.component.html
+++ b/src/app/components/tx/tx.component.html
@@ -49,7 +49,7 @@
                       }} uatom
                   </span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li *ngIf="tx.gasUsed && tx.gasUsed" class="list-group-item d-flex justify-content-between align-items-center">
                   Gas (used/wanted)
                   <span class="badge badge-primary badge-pill">
                     {{ tx.gasUsed }}/{{ tx.gasWanted }}
