--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -1,6 +1,8 @@
+
 <div class="row">
-  <div *ngIf="(appState | async).validators.serviceLoaded; else elseBlock" 
-       class="row mat-elevation-z8 table-responsive text-nowrap scrollbar-primary text-nowrap">
+  <div class="row mat-elevation-z8 table-responsive text-nowrap scrollbar-primary text-nowrap">
+  <!-- <div *ngIf="(appState | async).validators.serviceLoaded; else elseBlock" 
+       class="row mat-elevation-z8 table-responsive text-nowrap scrollbar-primary text-nowrap"> -->
     <div class="container">
       <div class="row">
         <div class="col-8">
