Filtering and sorting system in Validators component table fully rewritten Material-way

--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -15,7 +15,7 @@
     <div class="dropdown-menu" value="bonded">
       <a class="dropdown-item" (click)="validatorsBondFilter(2)" value="bonded">Bonded</a>
       <a class="dropdown-item" (click)="validatorsJailedFilter(true)" value="jailed">Jailed</a>
-      <a class="dropdown-item" (click)="validatorsFilter(0, false)" value="unbonded">Unbonded</a>
+      <a class="dropdown-item" (click)="validatorsBondJailedFilter(0, false)" value="unbonded">Unbonded</a>
       <a class="dropdown-item" (click)="validatorsBondFilter(1)" value="unbonding">Unbonding</a>
       <a class="dropdown-item" (click)="validatorsNoFilter()" value="all">All</a>
     </div>
