Labeling added to validators filter button

--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -7,9 +7,13 @@
     Bonded BondStatus = 0x02 
   -->
   <div class="dropdown" mdbDropdown>
-    <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle waves-light" size="sm"
-      mdbWavesEffect>
-      Status
+    <button mdbDropdownToggle 
+            type="button" 
+            mdbBtn color="primary" 
+            class="dropdown-toggle waves-light" 
+            size="sm" 
+            mdbWavesEffect>
+      {{tableFilterButtonLabel}}
     </button>
   
     <div class="dropdown-menu" value="bonded">
