--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -98,18 +98,18 @@
         </td>
       </ng-container>
   
-      <!-- <ng-container matColumnDef="unbond">
+      <ng-container matColumnDef="unbond">
         <th  mat-header-cell *matHeaderCellDef class="th-lg"> 
           <i class="ion-log-out"></i>Unbond 
         </th>
         <td  mat-cell *matCellDef="let validator">
-          {{ validator.unbonding_total/1e6 | number:'.0-0'}} <span class="ticker">ATOM</span>
-          <br>
+          <!-- {{ validator.unbonding_total/1e6 | number:'.0-0'}} <span class="ticker">ATOM</span>
+          <br> -->
           <span class="table-subtitle" matTooltip="Completion Time" matTooltipPosition="above"><i class="ion-android-time"></i>&nbsp;
             {{validator.unbonding_time | date: "MMM d, y"}}
           </span>
         </td>
-      </ng-container> -->
+      </ng-container>
       
       <ng-container matColumnDef="bond">
         <th mat-sort-header="self_bond" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-log-in"></i>&nbsp;Self-Bond</th>
@@ -126,9 +126,9 @@
         </td>
       </ng-container>
   
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
       <tr mat-row 
-          *matRowDef="let validator; columns: displayedColumns;"
+          *matRowDef="let validator; columns: getDisplayedColumns();"
           [appBgHighlight]="'#d1d1d1'" 
           defaultColor="#ffffff">
       </tr>
