--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -47,7 +47,7 @@
         </td>
       </ng-container>
     
-      <!-- <ng-container matColumnDef="status">
+      <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-load-a"></i>&nbsp;Status</th>
         <td mat-cell *matCellDef="let validator">  
           <span *ngIf="validator.jailed"><i class="ion-record jailed"></i></span>
@@ -55,12 +55,14 @@
           <span *ngFor="let block of (appState | async).blocks.slice(0,1)">
           {{
             block.header?.height !== null
-            ? (100-validator.slashing?.missed_blocks_counter/(block.header.height-validator.slashing?.start_height) | number:'.0')
-            : 0
+                ? ( validator.signing_info 
+                    ? (100-validator.signing_info.missed_blocks_counter/(block.header.height-validator.signing_info.start_height) | number:'.0') 
+                    : 0 )
+                : 0
           }} %
           </span>
         </td>
-      </ng-container> -->
+      </ng-container>
     
       <ng-container matColumnDef="weight">
         <th mat-sort-header="tokens" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-flash"></i>&nbsp;Voting Weight</th>
@@ -76,11 +78,11 @@
         <td mat-cell *matCellDef="let validator">
           <span matTooltip="Balance" matTooltipPosition="above">
             {{ 
-              (validator.distribution?.balance ? 
-                (validator.distribution?.balance.amount)/1e6 :
-                '0')                 
-                | number:'.2-2' 
+              (validator.account.value?.coins ? 
+                  validator.account.value.coins[0].amount/1e6 : 0 ) | number:'.2-2'
+                     
             }}
+            
           </span>
           <span class="ticker"> ATOM</span>
         </td>
